# dbt-ci-templates

./: README.md  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt
.github/workflows/: basic-cd.yaml  basic-cd.yml  basic-ci.yml  basic-ci_ghcr.yml  slim-cd.yml  slim-ci.yml
macros/: ci_drop_environment.sql  create_cluster.sql  create_environment.sql  drop_cluster.sql  drop_environment.sql
models/: ecommerce.yml  schema.yml
models/marts/: fraud_activity.sql  funds_movement.sql  item_summary_5min.sql
models/sources/: auction.sql  items.sql  purchases.sql  sources.yml
models/staging/: item_purchases.sql  item_summary.sql  winning_bids.sql
